syntax = "proto3";

message WsError {
    ErrorCode code = 1;
    string msg = 2;
}
enum ErrorCode {
    InternalError = 0;
    UnsupportedMessage = 1;
    Unauthorized = 2;
}
